feat: AGEL-1762 рефаторинг Epic-4, счета

--- a/src/shared/model/i18n/locales/en/en.json
+++ b/src/shared/model/i18n/locales/en/en.json
@@ -130,6 +130,7 @@
   "Разблокировать счет": "Unlock account",
   "Статус заявки": "Application status",
   "№ счета: ": "Account number: ",
+  "Реквизиты счета": "Account details",
   "Дата открытия счета": "Account opening date",
   "Дата закрытия счета": "Account closing date",
   "Причина блокировки": "Blocking Reason",
@@ -273,10 +274,10 @@
   "Закрытый": "Closed",
   "Заблокированный": "Blocked",
   "Мои счета": "My accounts",
-  "Открытые счета": "Opened accounts",
-  "Заявки на открытие счета": "Open account requests",
-  "Закрытые счета": "Closed accounts",
-  "Заблокированные счета": "Blocked accounts",
+  "Дебетовые": "Debit",
+  "Депозитные": "Deposit",
+  "Кредитные": "Credit",
+  "Отобразить неактивные счета": "Show closed accounts",
   "На данный момент \n у Вас нет соответствующих счетов": "You currently have no corresponding accounts",
   "Комиссия за снятие наличных в банкомате другого банка": "Commission for cash withdrawal at another bank's ATM",
   "Комиссия за снятие наличных в банкомате банка-партнёра": "Commission for cash withdrawal at a partner bank's ATM",
