--- a/src/shared/model/i18n/locales/ru/ru.json
+++ b/src/shared/model/i18n/locales/ru/ru.json
@@ -130,6 +130,7 @@
   "Разблокировать счет": "Разблокировать счет",
   "Статус заявки": "Статус заявки",
   "№ счета: ": "№ счета: ",
+  "Реквизиты счета": "Реквизиты счета",
   "Дата открытия счета": "Дата открытия счета",
   "Дата закрытия счета": "Дата закрытия счета",
   "Причина блокировки": "Причина блокировки",
@@ -273,10 +274,10 @@
   "Закрытый": "Закрытый",
   "Заблокированный": "Заблокированный",
   "Мои счета": "Мои счета",
-  "Открытые счета": "Открытые счета",
-  "Заявки на открытие счета": "Заявки на открытие счета",
-  "Закрытые счета": "Закрытые счета",
-  "Заблокированные счета": "Заблокированные счета",
+  "Дебетовые": "Дебетовые",
+  "Депозитные": "Депозитные",
+  "Кредитные": "Кредитные",
+  "Отобразить неактивные счета": "Отобразить неактивные счета",
   "На данный момент \n у Вас нет соответствующих счетов": "На данный момент \n у Вас нет соответствующих счетов",
   "Комиссия за снятие наличных в банкомате другого банка": "Комиссия за снятие наличных в банкомате другого банка",
   "Комиссия за снятие наличных в банкомате банка-партнёра": "Комиссия за снятие наличных в банкомате банка-партнёра",
