--- a/src/shared/model/i18n/locales/ru/ru_old.json
+++ b/src/shared/model/i18n/locales/ru/ru_old.json
@@ -25,5 +25,9 @@
   "актуальный слайд": "актуальный слайд",
   "следующий слайд": "следующий слайд",
   "переключить назад": "переключить назад",
-  "переключить вперед": "переключить вперед"
+  "переключить вперед": "переключить вперед",
+  "Открытые счета": "Открытые счета",
+  "Заявки на открытие счета": "Заявки на открытие счета",
+  "Закрытые счета": "Закрытые счета",
+  "Заблокированные счета": "Заблокированные счета"
 }
