feat: AGEL-1666 добавлен перевод

--- a/src/shared/model/i18n/locales/en/en.json
+++ b/src/shared/model/i18n/locales/en/en.json
@@ -14,7 +14,8 @@
   "Перевести": "Transfer",
   "Оформить карту": "Apply for a card",
   "Показать больше": "Show more",
-  "До 30 сентября оформите ": "Apply before September 30 ",
+  "Депозит A-Geld ": "Deposit A-Geld ",
+  "До 30 сентября оформите Депозит A-Geld": "Make before September 30 an A-Geld Deposit ",
   "до": "up to",
   "Процентная ставка": "Interest rate",
   "от": "from",
@@ -27,6 +28,7 @@
   "Максимальная сумма депозита": "Maximum deposit amount",
   "месяцев": "months",
   "Подробная информация": "Detailed information",
+  "До 30 сентября оформите ": "Apply before September 30 ",
   "Номер депозитного счета": "Deposit account number",
   "Сумма на депозитном счете": "Deposit balance",
   "Окончание срока депозита": "Deposit expiration date",
@@ -51,19 +53,12 @@
   "На почту приходят счета и справки": "Bills and statements are sent to the email",
   "На данный момент \n у Вас нет соответствующих карт": "You currently have no corresponding cards",
   "Создать карту": "Create a card",
-  "Тип объекта": "Object type",
-  "Банкоматы": "ATMs",
-  "Инфокиоск": "Info kiosk",
-  "Главный офис": "Head office",
-  "Отделения банка": "Bank branches",
-  "Обменый пункт": "Exchange office",
-  "Статус работы": "Operating status",
-  "Работает": "Working",
   "Фильтр": "Filter",
   "Применить фильтр": "Apply filter",
-  "Отменить": "Cancel",
+  "Сбросить": "Throw off",
   "Email должен быть валидным": "Email must be valid",
   "Email должен содержать от 8 до 50 символов": "Email must contain from 8 to 50 characters",
+  "Отменить": "Cancel",
   "Сохранить": "Save",
   "Изменить": "Change",
   "Добавить": "Add",
@@ -137,12 +132,23 @@
   "Информация о счете": "Account Information",
   "История операций": "Transaction history",
   "Счет не найден": "Account not found",
-  "Закрыто до ": "Closed until",
+  "Понедельник - Пятница: ": "Monday - Friday: ",
+  "Суббота: ": "Saturday: ",
+  "Воскресенье - ": "Sunday - ",
   "Открыто до ": "Open until ",
-  "Открыто круглосуточно": "It is open around the clock",
+  "Закрыто до ": "Closed until",
   "Показать полную информацию": "Show full information",
   "Вернуться к списку": "Go back to the list",
+  "Контактная информация": "Contact information",
+  "Телефон отделения:": "Branch phone number:",
+  "E-mail:": "E-mail:",
+  "Отделения в": "Branches in",
   "Поиск по адресу или названию": "Search by address or name",
+  "Вы здесь:": "You are here:",
+  "Популярные города": "Popular cities",
+  "Ваш город —": "Your city —",
+  "Все верно": "That's right",
+  "Нет, изменить": "No, change it",
   "Авторизация": "Authorization",
   "Введите код из смс": "Enter the code from SMS",
   "Введите пароль": "Enter password",
@@ -156,10 +162,9 @@
   "Консультация юридических лиц": "Consultation of legal entities",
   "Блокировка карты": "Blocking the card",
   "круглосуточно": "around the clock",
-  "Вы действительно хотите открыть депозит?": "Вы действительно хотите открыть депозит?",
-  "Отмена": "Отмена",
-  "Депозит A-Geld Базовый": "Депозит A-Geld Базовый",
-  "RUB": "RUB",
+  "Вы действительно хотите открыть депозит?": "Do you really want to open a deposit?",
+  "Отмена": "Cancel",
+  "Депозит A-Geld Базовый": "Deposit A-Geld Basic",
   "Капитализация": "Capitalization",
   "Без капитализации": "No capitalization",
   "Ежедневная": "Daily",
@@ -186,7 +191,7 @@
   "Капитализация процентов": "Interest rate capitalization",
   "Проценты присоединяются к сумме депозита": "Interest is added to the deposit amount",
   "Управление онлайн": "Online management",
-  "Открыть, пополнить и закрыть депозит можно через интернет-банк": "Открыть, пополнить и закрыть депозит можно через интернет-банк",
+  "Открыть, пополнить и закрыть депозит можно через интернет-банк": "You can open, top up and close a deposit via online banking",
   "Дополнительные взносы": "Additional fees",
   "В зависимости от условий по депозиту вы можете совершать дополнительные взносы и увеличивать свой доход": "You can open, top up and close a deposit via Internet banking",
   "Выбор из трех валют": "Choice of three currencies",
@@ -207,8 +212,8 @@
   "Изначальная сумма депозита": "Initial deposit amount",
   "Отозвать": "Withdraw",
   "Пополнить": "Top-up",
-  "Вы действительно хотите включить автоматическую пролонгацию депозита?": "Вы действительно хотите включить автоматическую пролонгацию депозита?",
-  "Вы действительно хотите отключить автоматическую пролонгацию депозита?": "Вы действительно хотите отключить автоматическую пролонгацию депозита?",
+  "Вы действительно хотите включить автоматическую пролонгацию депозита?": "Do you really want to enable automatic deposit prolongation?",
+  "Вы действительно хотите отключить автоматическую пролонгацию депозита?": "Do you really want to disable automatic deposit prolongation?",
   "График начисления процентов": "Interest accrual schedule",
   "Информация о пополнении депозита": "Deposit top-up information",
   "Пролонгация депозита": "Deposit renewal",
@@ -264,10 +269,18 @@
   "Без возможности снятия средств": "No withdrawal option",
   "До минимальной суммы": "Up to minimum amount",
   "В пределах начисленных процентов": "Within the accrued interest",
-  "A-Geld бессрочный": "A-Geld бессрочный",
+  "бессрочный": "indefinite",
   "Банкомат": "ATM",
+  "Инфокиоск": "Info kiosk",
+  "Главный офис": "Head office",
   "Отделение банка": "Bank branch",
   "Обменный пункт": "Exchange office",
+  "Работает": "Working",
+  "Для физических лиц": "For individuals",
+  "Для юридических лиц": "For legal entities",
+  "Тип объекта": "Object type",
+  "Статус работы": "Operating status",
+  "По типу клиентов": "By customer type",
   "Все": "All",
   "Активный": "Active",
   "Закрытый": "Closed",
