--- a/src/shared/model/i18n/locales/en/en_old.json
+++ b/src/shared/model/i18n/locales/en/en_old.json
@@ -32,18 +32,6 @@
   "Для жителей Москвы и Московской области": "For residents of Moscow and the Moscow region",
   "Вконтакте": "Vkontakte",
   "Чат с банком": "Chat with the bank",
-  "Понедельник - Пятница: ": "Monday - Friday: ",
-  "Суббота: ": "Saturday: ",
-  "Воскресенье - ": "Sunday - ",
   "выходной": "weekend",
-  "Объекты в": "Objects in",
-  "Москве": "Moscow",
-  "Пыталово": "Pytalovo",
-  "Пыталовский": "Pytalovsky",
-  "Новый город": "A new city",
-  "4B": "4V",
-  "3B": "3V",
-  "Понедельник - Пятница: 9:00-19:00 Cуббота: 10:00-15:00 Воскресенье - выходной": "Monday - Friday: 9:00-19:00 Saturday: 10:00-15:00 Sunday - weekend",
-  "Понедельник - Пятница: 10:00-14:00 Cуббота: 11:00-13:00 Воскресенье - выходной": "Monday - Friday: 10:00-14:00 Saturday: 11:00-13:00 Sunday - weekend",
-  "Без выходных, круглосуточно": "Seven days a week, around the clock"
+  "Москве": "Moscow"
 }
