--- a/src/shared/model/i18n/locales/ru/ru_old.json
+++ b/src/shared/model/i18n/locales/ru/ru_old.json
@@ -25,5 +25,11 @@
   "актуальный слайд": "актуальный слайд",
   "следующий слайд": "следующий слайд",
   "переключить назад": "переключить назад",
-  "переключить вперед": "переключить вперед"
+  "переключить вперед": "переключить вперед",
+  "Банкоматы": "Банкоматы",
+  "Отделения банка": "Отделения банка",
+  "Обменый пункт": "Обменый пункт",
+  "Открыто круглосуточно": "Открыто круглосуточно",
+  "A-Geld бессрочный": "A-Geld бессрочный",
+  "Обменный пункт": "Обменный пункт"
 }
