--- a/src/shared/model/i18n/locales/ru/ru.json
+++ b/src/shared/model/i18n/locales/ru/ru.json
@@ -14,7 +14,8 @@
   "Перевести": "Перевести",
   "Оформить карту": "Оформить карту",
   "Показать больше": "Показать больше",
-  "До 30 сентября оформите ": "До 30 сентября оформите ",
+  "Депозит A-Geld ": "Депозит A-Geld ",
+  "До 30 сентября оформите Депозит A-Geld": "До 30 сентября оформите Депозит A-Geld",
   "до": "до",
   "Процентная ставка": "Процентная ставка",
   "от": "от",
@@ -27,6 +28,7 @@
   "Максимальная сумма депозита": "Максимальная сумма депозита",
   "месяцев": "месяцев",
   "Подробная информация": "Подробная информация",
+  "До 30 сентября оформите ": "До 30 сентября оформите ",
   "Номер депозитного счета": "Номер депозитного счета",
   "Сумма на депозитном счете": "Сумма на депозитном счете",
   "Окончание срока депозита": "Окончание срока депозита",
@@ -51,19 +53,12 @@
   "На почту приходят счета и справки": "На почту приходят счета и справки",
   "На данный момент \n у Вас нет соответствующих карт": "На данный момент \n у Вас нет соответствующих карт",
   "Создать карту": "Создать карту",
-  "Тип объекта": "Тип объекта",
-  "Банкоматы": "Банкоматы",
-  "Инфокиоск": "Инфокиоск",
-  "Главный офис": "Главный офис",
-  "Отделения банка": "Отделения банка",
-  "Обменый пункт": "Обменый пункт",
-  "Статус работы": "Статус работы",
-  "Работает": "Работает",
   "Фильтр": "Фильтр",
   "Применить фильтр": "Применить фильтр",
-  "Отменить": "Отменить",
+  "Сбросить": "Сбросить",
   "Email должен быть валидным": "Email должен быть валидным",
   "Email должен содержать от 8 до 50 символов": "Email должен содержать от 8 до 50 символов",
+  "Отменить": "Отменить",
   "Сохранить": "Сохранить",
   "Изменить": "Изменить",
   "Добавить": "Добавить",
@@ -137,12 +132,23 @@
   "Информация о счете": "Информация о счете",
   "История операций": "История операций",
   "Счет не найден": "Счет не найден",
-  "Закрыто до ": "Закрыто до ",
+  "Понедельник - Пятница: ": "Понедельник - Пятница: ",
+  "Суббота: ": "Суббота: ",
+  "Воскресенье - ": "Воскресенье - ",
   "Открыто до ": "Открыто до ",
-  "Открыто круглосуточно": "Открыто круглосуточно",
+  "Закрыто до ": "Закрыто до ",
   "Показать полную информацию": "Показать полную информацию",
   "Вернуться к списку": "Вернуться к списку",
+  "Контактная информация": "Контактная информация",
+  "Телефон отделения:": "Телефон отделения:",
+  "E-mail:": "E-mail:",
+  "Отделения в": "Отделения в",
   "Поиск по адресу или названию": "Поиск по адресу или названию",
+  "Вы здесь:": "Вы здесь:",
+  "Популярные города": "Популярные города",
+  "Ваш город —": "Ваш город —",
+  "Все верно": "Все верно",
+  "Нет, изменить": "Нет, изменить",
   "Авторизация": "Авторизация",
   "Введите код из смс": "Введите код из смс",
   "Введите пароль": "Введите пароль",
@@ -264,10 +270,18 @@
   "Без возможности снятия средств": "Без возможности снятия средств",
   "До минимальной суммы": "До минимальной суммы",
   "В пределах начисленных процентов": "В пределах начисленных процентов",
-  "A-Geld бессрочный": "A-Geld бессрочный",
+  "бессрочный": "бессрочный",
   "Банкомат": "Банкомат",
+  "Инфокиоск": "Инфокиоск",
+  "Главный офис": "Главный офис",
   "Отделение банка": "Отделение банка",
   "Обменный пункт": "Обменный пункт",
+  "Работает": "Работает",
+  "Для физических лиц": "Для физических лиц",
+  "Для юридических лиц": "Для юридических лиц",
+  "Тип объекта": "Тип объекта",
+  "Статус работы": "Статус работы",
+  "По типу клиентов": "По типу клиентов",
   "Все": "Все",
   "Активный": "Активный",
   "Закрытый": "Закрытый",
