fix: AGEL-1666 перевод

--- a/src/shared/model/i18n/locales/en/en.json
+++ b/src/shared/model/i18n/locales/en/en.json
@@ -246,10 +246,10 @@
   "Закрытый": "Closed",
   "Заблокированный": "Blocked",
   "Мои счета": "My accounts",
-  "Открытые счета": "Opened accounts",
-  "Заявки на открытие счета": "Open account requests",
-  "Закрытые счета": "Closed accounts",
-  "Заблокированные счета": "Blocked accounts",
+  "Дебетовые": "Debit",
+  "Депозитные": "Deposit",
+  "Кредитные": "Credit",
+  "Отобразить неактивные счета": "Show closed accounts",
   "На данный момент \n у Вас нет соответствующих счетов": "You currently have no corresponding accounts",
   "Комиссия за снятие наличных в банкомате другого банка": "Commission for cash withdrawal at another bank's ATM",
   "Комиссия за снятие наличных в банкомате банка-партнёра": "Commission for cash withdrawal at a partner bank's ATM",
