fix: AGEL-1666 перевод

--- a/src/shared/model/i18n/locales/en/en.json
+++ b/src/shared/model/i18n/locales/en/en.json
@@ -28,6 +28,7 @@
   "Максимальная сумма депозита": "Maximum deposit amount",
   "месяцев": "months",
   "Подробная информация": "Detailed information",
+  "До 30 сентября оформите ": "Make before September 30 an ",
   "Номер депозитного счета": "Deposit account number",
   "Сумма на депозитном счете": "Deposit balance",
   "Окончание срока депозита": "Deposit expiration date",
@@ -220,32 +221,11 @@
   "Доступ в личный кабинет возможен с телефонного \n номера, указанного при открытии счета в нашем банке": "Access to your personal account is possible from the telephone \n number specified when opening an account with our bank",
   "Для создания кабинета пользователя нажмите кнопку Регистрация": "To create a user account, click the Registration button",
   "Кредитный счет": "Credit account",
+  "Откройте счет не выходя из дома": "Open an account without leaving home",
   "Дебетовый счет": "Debit account",
   "Депозитный счет": "Deposit account",
-  "Больше денег без лишних вложений": "More money without extra investment",
-  "Откройте счет не выходя из дома": "Open an account without leaving home",
-  "Сделайте шаг навстречу мечте": "Take a step towards your dream",
-  "Bce": "All",
-  "Кредитная": "Credit",
-  "Дебетовая": "Debit",
-  "Депозитная": "Deposit",
-  "МИР": "MIR",
-  "2 месяца": "2 months",
-  "3 месяца": "3 months",
-  "6 месяцев": "6 months",
-  "9 месяцев": "9 months",
-  "1 год": "1 year",
-  "2 года": "2 year",
-  "3 года": "3 year",
-  "Другой срок": "Different term",
-  "Без возможности снятия средств": "No withdrawal option",
-  "До минимальной суммы": "Up to minimum amount",
-  "В пределах начисленных процентов": "Within the accrued interest",
-  "Все": "All",
-  "Активный": "Active",
-  "Закрытый": "Closed",
-  "Заблокированный": "Blocked",
   "Мои счета": "My accounts",
+  "Все": "All",
   "Дебетовые": "Debit",
   "Депозитные": "Deposit",
   "Кредитные": "Credit",
@@ -292,6 +272,7 @@
   "Документы": "Documents",
   "Вопросы и ответы": "Q&A",
   "Войти": "Log in",
+  "Депозит Premium": "Deposit Premium",
   "Можем закрыть в любой момент времени, без перерасчета % Возможность частичного снятия Возможность пополнения\nСрок от 180 дней и выше": "Can be closed at any moment without recalculation of interest. Possibility of partial withdrawal. Possibility of deposit expansion.For a period of 180 days or more.",
   "Открыть депозит": "Open a deposit",
   "Кредитная карта": "Credit card",
@@ -311,12 +292,5 @@
   "Успех": "Success",
   "Ошибка": "Error",
   "Операция прошла успешно": "Operation completed successfully",
-  "Повторите запрос позже": "Please try again later",
-  "Новая карта": "New card",
-  "Между счетами": "Between accounts",
-  "По номеру телефона": "By phone number",
-  "По номеру карты": "By card number",
-  "По реквизитам": "By requisites",
-  "Мобильная связь": "Mobile communication",
-  "Коммунальные платежи": "Utility payments"
+  "Повторите запрос позже": "Please try again later"
 }
