--- a/src/shared/model/i18n/locales/en/en_old.json
+++ b/src/shared/model/i18n/locales/en/en_old.json
@@ -1,2 +1,30 @@
 {
+  "Больше денег без лишних вложений": "More money without extra investment",
+  "Сделайте шаг навстречу мечте": "Take a step towards your dream",
+  "Bce": "All",
+  "Кредитная": "Credit",
+  "Дебетовая": "Debit",
+  "Депозитная": "Deposit",
+  "МИР": "MIR",
+  "2 месяца": "2 months",
+  "3 месяца": "3 months",
+  "6 месяцев": "6 months",
+  "9 месяцев": "9 months",
+  "1 год": "1 year",
+  "2 года": "2 year",
+  "3 года": "3 year",
+  "Другой срок": "Different term",
+  "Без возможности снятия средств": "No withdrawal option",
+  "До минимальной суммы": "Up to minimum amount",
+  "В пределах начисленных процентов": "Within the accrued interest",
+  "Активный": "Active",
+  "Закрытый": "Closed",
+  "Заблокированный": "Blocked",
+  "Новая карта": "New card",
+  "Между счетами": "Between accounts",
+  "По номеру телефона": "By phone number",
+  "По номеру карты": "By card number",
+  "По реквизитам": "By requisites",
+  "Мобильная связь": "Mobile communication",
+  "Коммунальные платежи": "Utility payments"
 }
