--- a/src/shared/model/i18n/locales/ru/ru.json
+++ b/src/shared/model/i18n/locales/ru/ru.json
@@ -28,6 +28,7 @@
   "Максимальная сумма депозита": "Максимальная сумма депозита",
   "месяцев": "месяцев",
   "Подробная информация": "Подробная информация",
+  "До 30 сентября оформите ": "До 30 сентября оформите ",
   "Номер депозитного счета": "Номер депозитного счета",
   "Сумма на депозитном счете": "Сумма на депозитном счете",
   "Окончание срока депозита": "Окончание срока депозита",
@@ -124,6 +125,7 @@
   "Разблокировать счет": "Разблокировать счет",
   "Статус заявки": "Статус заявки",
   "№ счета: ": "№ счета: ",
+  "Реквизиты счета": "Реквизиты счета",
   "Дата открытия счета": "Дата открытия счета",
   "Дата закрытия счета": "Дата закрытия счета",
   "Причина блокировки": "Причина блокировки",
@@ -136,8 +138,7 @@
   "Введите пароль": "Введите пароль",
   "Вы действительно хотите открыть депозит?": "Вы действительно хотите открыть депозит?",
   "Отмена": "Отмена",
-  "Депозит A-Geld Базовый": "Deposit A-Geld Basic",
-  "RUB": "RUB",
+  "Депозит A-Geld Базовый": "Депозит A-Geld Базовый",
   "Капитализация": "Капитализация",
   "Без капитализации": "Без капитализации",
   "Ежедневная": "Ежедневная",
@@ -221,33 +222,11 @@
   "Доступ в личный кабинет возможен с телефонного \n номера, указанного при открытии счета в нашем банке": "Доступ в личный кабинет возможен с телефонного \n номера, указанного при открытии счета в нашем банке",
   "Для создания кабинета пользователя нажмите кнопку Регистрация": "Для создания кабинета пользователя нажмите кнопку  Регистрация",
   "Кредитный счет": "Кредитный счет",
+  "Откройте счет не выходя из дома": "Откройте счет не выходя из дома",
   "Дебетовый счет": "Дебетовый счет",
   "Депозитный счет": "Депозитный счет",
-  "Больше денег без лишних вложений": "Больше денег без лишних вложений",
-  "Откройте счет не выходя из дома": "Откройте счет не выходя из дома",
-  "Сделайте шаг навстречу мечте": "Сделайте шаг навстречу мечте",
-  "Bce": "Bce",
-  "Кредитная": "Кредитная",
-  "Дебетовая": "Дебетовая",
-  "Депозитная": "Депозитная",
-  "МИР": "МИР",
-  "2 месяца": "2 месяца",
-  "3 месяца": "3 месяца",
-  "6 месяцев": "6 месяцев",
-  "9 месяцев": "9 месяцев",
-  "1 год": "1 год",
-  "2 года": "2 года",
-  "3 года": "3 года",
-  "Другой срок": "Другой срок",
-  "Без возможности снятия средств": "Без возможности снятия средств",
-  "До минимальной суммы": "До минимальной суммы",
-  "В пределах начисленных процентов": "В пределах начисленных процентов",
-  "бессрочный": "бессрочный",
-  "Все": "Все",
-  "Активный": "Активный",
-  "Закрытый": "Закрытый",
-  "Заблокированный": "Заблокированный",
   "Мои счета": "Мои счета",
+  "Все": "Все",
   "Дебетовые": "Дебетовые",
   "Депозитные": "Депозитные",
   "Кредитные": "Кредитные",
@@ -314,12 +293,5 @@
   "Успех": "Успех",
   "Ошибка": "Ошибка",
   "Операция прошла успешно": "Операция прошла успешно",
-  "Повторите запрос позже": "Повторите запрос позже",
-  "Новая карта": "Новая карта",
-  "Между счетами": "Между счетами",
-  "По номеру телефона": "По номеру телефона",
-  "По номеру карты": "По номеру карты",
-  "По реквизитам": "По реквизитам",
-  "Мобильная связь": "Мобильная связь",
-  "Коммунальные платежи": "Коммунальные платежи"
+  "Повторите запрос позже": "Повторите запрос позже"
 }
