--- a/src/shared/model/i18n/locales/ru/ru_old.json
+++ b/src/shared/model/i18n/locales/ru/ru_old.json
@@ -1,2 +1,31 @@
 {
+  "Больше денег без лишних вложений": "Больше денег без лишних вложений",
+  "Сделайте шаг навстречу мечте": "Сделайте шаг навстречу мечте",
+  "Bce": "Bce",
+  "Кредитная": "Кредитная",
+  "Дебетовая": "Дебетовая",
+  "Депозитная": "Депозитная",
+  "МИР": "МИР",
+  "2 месяца": "2 месяца",
+  "3 месяца": "3 месяца",
+  "6 месяцев": "6 месяцев",
+  "9 месяцев": "9 месяцев",
+  "1 год": "1 год",
+  "2 года": "2 года",
+  "3 года": "3 года",
+  "Другой срок": "Другой срок",
+  "Без возможности снятия средств": "Без возможности снятия средств",
+  "До минимальной суммы": "До минимальной суммы",
+  "В пределах начисленных процентов": "В пределах начисленных процентов",
+  "бессрочный": "бессрочный",
+  "Активный": "Активный",
+  "Закрытый": "Закрытый",
+  "Заблокированный": "Заблокированный",
+  "Новая карта": "Новая карта",
+  "Между счетами": "Между счетами",
+  "По номеру телефона": "По номеру телефона",
+  "По номеру карты": "По номеру карты",
+  "По реквизитам": "По реквизитам",
+  "Мобильная связь": "Мобильная связь",
+  "Коммунальные платежи": "Коммунальные платежи"
 }
