--- a/src/shared/model/i18n/locales/en/en_old.json
+++ b/src/shared/model/i18n/locales/en/en_old.json
@@ -14,9 +14,9 @@
   "2 года": "2 year",
   "3 года": "3 year",
   "Другой срок": "Different term",
-  "Без возможности снятия средств": "No withdrawal option",
+  "Без снятия": "No withdrawal",
   "До минимальной суммы": "Up to minimum amount",
-  "В пределах начисленных процентов": "Within the accrued interest",
+  "Снятие процентов": "Withdrawal interest",
   "Активный": "Active",
   "Закрытый": "Closed",
   "Заблокированный": "Blocked",
