--- a/src/shared/model/i18n/locales/ru/ru_old.json
+++ b/src/shared/model/i18n/locales/ru/ru_old.json
@@ -14,9 +14,9 @@
   "2 года": "2 года",
   "3 года": "3 года",
   "Другой срок": "Другой срок",
-  "Без возможности снятия средств": "Без возможности снятия средств",
+  "Без снятия": "Без снятия",
   "До минимальной суммы": "До минимальной суммы",
-  "В пределах начисленных процентов": "В пределах начисленных процентов",
+  "Снятие процентов": "Снятие процентов",
   "бессрочный": "бессрочный",
   "Активный": "Активный",
   "Закрытый": "Закрытый",
