refactor: AGEL-1787 DepositWithdrawal

--- a/src/shared/model/i18n/locales/en/en_old.json
+++ b/src/shared/model/i18n/locales/en/en_old.json
@@ -14,6 +14,7 @@
   "2 года": "2 year",
   "3 года": "3 year",
   "Другой срок": "Different term",
+  "Нет данных": "No data",
   "Без снятия": "No withdrawal",
   "До минимальной суммы": "Up to minimum amount",
   "Снятие процентов": "Withdrawal interest",
