--- a/src/shared/model/i18n/locales/ru/ru_old.json
+++ b/src/shared/model/i18n/locales/ru/ru_old.json
@@ -14,6 +14,7 @@
   "2 года": "2 года",
   "3 года": "3 года",
   "Другой срок": "Другой срок",
+  "Нет данных": "Нет данных",
   "Без снятия": "Без снятия",
   "До минимальной суммы": "До минимальной суммы",
   "Снятие процентов": "Снятие процентов",
