--- a/src/shared/model/i18n/locales/en/en.json
+++ b/src/shared/model/i18n/locales/en/en.json
@@ -231,23 +231,21 @@
   "Кредитные": "Credit",
   "Отобразить неактивные счета": "Show closed accounts",
   "На данный момент \n у Вас нет соответствующих счетов": "You currently have no corresponding accounts",
-  "Комиссия за снятие наличных в банкомате другого банка": "Commission for cash withdrawal at another bank's ATM",
-  "Комиссия за снятие наличных в банкомате банка-партнёра": "Commission for cash withdrawal at a partner bank's ATM",
-  "Комиссия за снятие наличных в другой валюте в банкоматах банков за рубежом": "Commission for cash withdrawal in another currency at ATMs of banks abroad",
-  "Комиссия за переводы при исчерпании лимита": "Commission for transfers when the limit is exceeded",
-  "Комиссия за оплату при исчерпании лимита": "Commission for payment when the limit is exceeded",
-  "Лимит на снятие денег в день": "Daily cash withdrawal limit",
-  "Лимит на снятие денег в месяц": "Monthly cash withdrawal limit",
-  "Лимит на сумму переводов в день": "Daily transfer limit",
-  "Лимит на сумму переводов в месяц": "Monthly transfer limit",
-  "Лимит на безналичные платежи в день": "Daily non-cash payment limit",
-  "Лимит на безналичные платежи в месяц": "Monthly non-cash payment limit",
-  "Лимит на снятие денег в день без комиссии": "Daily cash withdrawal limit without commission",
-  "Лимит на снятие денег в месяц без комиссии": "Monthly cash withdrawal limit without commission",
-  "Лимит на сумму переводов в день без комиссии": "Daily transfer limit without commission",
-  "Лимит на сумму переводов в месяц без комиссии": "Monthly transfer limit without commission",
-  "Лимит на безналичные платежи в день без комиссии": "Daily non-cash payment limit without commission",
-  "Лимит на безналичные платежи в месяц без комиссии": "Monthly non-cash payment limit without commission",
+  "Ежемесячный кэшбэк": "Monthly cashback",
+  "операций": "operations",
+  "по карте в месяц": "per card per month",
+  "по карте в день": "per card per day",
+  "Комиссия за снятие наличных для клиента": "Cash withdrawal fee for the client",
+  "Комиссия за снятие наличных для партнёра клиента": "Cash withdrawal fee for client's partner",
+  "Комиссия за снятие наличных для местного клиента": "Cash withdrawal fee for local customer",
+  "Комиссия за снятие наличных для международного клиента": "Cash withdrawal fee for an international client",
+  "Комиссия за переводы для клиента": "Commission for transfers for the client",
+  "Комиссия за переводы для партнёра клиент": "Commission for transfers for partner client",
+  "Комиссия за переводы для непартнёра клиента": "Commission for transfers for a non-partner of the client",
+  "Комиссия за международный перевод": "International transfer fee",
+  "Лимит на сумму в день": "Limit on amount per day",
+  "Лимит на сумму одной операции": "Limit on the amount of one transaction",
+  "Лимит на снятие одной операции": "Limit on withdrawal of one transaction",
   "Реквизиты карты": "Card details",
   "Тарифы и комиссии": "Rates and commissions",
   "Лимиты": "Limits",
