--- a/src/shared/model/i18n/locales/ru/ru.json
+++ b/src/shared/model/i18n/locales/ru/ru.json
@@ -232,23 +232,21 @@
   "Кредитные": "Кредитные",
   "Отобразить неактивные счета": "Отобразить неактивные счета",
   "На данный момент \n у Вас нет соответствующих счетов": "На данный момент \n у Вас нет соответствующих счетов",
-  "Комиссия за снятие наличных в банкомате другого банка": "Комиссия за снятие наличных в банкомате другого банка",
-  "Комиссия за снятие наличных в банкомате банка-партнёра": "Комиссия за снятие наличных в банкомате банка-партнёра",
-  "Комиссия за снятие наличных в другой валюте в банкоматах банков за рубежом": "Комиссия за снятие наличных в другой валюте в банкоматах банков за рубежом",
-  "Комиссия за переводы при исчерпании лимита": "Комиссия за переводы при исчерпании лимита",
-  "Комиссия за оплату при исчерпании лимита": "Комиссия за оплату при исчерпании лимита",
-  "Лимит на снятие денег в день": "Лимит на снятие денег в день",
-  "Лимит на снятие денег в месяц": "Лимит на снятие денег в месяц",
-  "Лимит на сумму переводов в день": "Лимит на сумму переводов в день",
-  "Лимит на сумму переводов в месяц": "Лимит на сумму переводов в месяц",
-  "Лимит на безналичные платежи в день": "Лимит на безналичные платежи в день",
-  "Лимит на безналичные платежи в месяц": "Лимит на безналичные платежи в месяц",
-  "Лимит на снятие денег в день без комиссии": "Лимит на снятие денег в день без комиссии",
-  "Лимит на снятие денег в месяц без комиссии": "Лимит на снятие денег в месяц без комиссии",
-  "Лимит на сумму переводов в день без комиссии": "Лимит на сумму переводов в день без комиссии",
-  "Лимит на сумму переводов в месяц без комиссии": "Лимит на сумму переводов в месяц без комиссии",
-  "Лимит на безналичные платежи в день без комиссии": "Лимит на безналичные платежи в день без комиссии",
-  "Лимит на безналичные платежи в месяц без комиссии": "Лимит на безналичные платежи в месяц без комиссии",
+  "Ежемесячный кэшбэк": "Ежемесячный кэшбэк",
+  "операций": "операций",
+  "по карте в месяц": "по карте в месяц",
+  "по карте в день": "по карте в день",
+  "Комиссия за снятие наличных для клиента": "Комиссия за снятие наличных для клиента",
+  "Комиссия за снятие наличных для партнёра клиента": "Комиссия за снятие наличных для партнёра клиента",
+  "Комиссия за снятие наличных для местного клиента": "Комиссия за снятие наличных для местного клиента",
+  "Комиссия за снятие наличных для международного клиента": "Комиссия за снятие наличных для международного клиента",
+  "Комиссия за переводы для клиента": "Комиссия за переводы для клиента",
+  "Комиссия за переводы для партнёра клиент": "Комиссия за переводы для партнёра клиент",
+  "Комиссия за переводы для непартнёра клиента": "Комиссия за переводы для непартнёра клиента",
+  "Комиссия за международный перевод": "Комиссия за международный перевод",
+  "Лимит на сумму в день": "Лимит на сумму в день",
+  "Лимит на сумму одной операции": "Лимит на сумму одной операции",
+  "Лимит на снятие одной операции": "Лимит на снятие одной операции",
   "Реквизиты карты": "Реквизиты карты",
   "Тарифы и комиссии": "Тарифы и комиссии",
   "Лимиты": "Лимиты",
