refactor: AGEL-1916 add eye-open/eye-close to Card, refactor deposit term

--- a/src/shared/model/i18n/locales/en/en.json
+++ b/src/shared/model/i18n/locales/en/en.json
@@ -20,13 +20,14 @@
   "Процентная ставка": "Interest rate",
   "от": "from",
   "Минимальная сумма депозита": "Minimum deposit amount",
-  "дней": "days",
+  "месяц": "month",
+  "месяца": "months",
+  "месяцев": "months",
   "Срок депозита": "Deposit term",
   "Оформить": "Apply",
   "Не откладывай жизнь на завтра!": "Don't put off life until tomorrow!",
   " откроет новые горизонты для вас": " will open new horizons for you",
   "Максимальная сумма депозита": "Maximum deposit amount",
-  "месяцев": "months",
   "Подробная информация": "Detailed information",
   "До 30 сентября оформите ": "Make before September 30 an ",
   "Номер депозитного счета": "Deposit account number",
