--- a/src/shared/model/i18n/locales/ru/ru.json
+++ b/src/shared/model/i18n/locales/ru/ru.json
@@ -20,13 +20,14 @@
   "Процентная ставка": "Процентная ставка",
   "от": "от",
   "Минимальная сумма депозита": "Минимальная сумма депозита",
-  "дней": "дней",
+  "месяц": "месяц",
+  "месяца": "месяца",
+  "месяцев": "месяцев",
   "Срок депозита": "Срок депозита",
   "Оформить": "Оформить",
   "Не откладывай жизнь на завтра!": "Не откладывай жизнь на завтра!",
   " откроет новые горизонты для вас": " откроет новые горизонты для вас",
   "Максимальная сумма депозита": "Максимальная сумма депозита",
-  "месяцев": "месяцев",
   "Подробная информация": "Подробная информация",
   "До 30 сентября оформите ": "До 30 сентября оформите ",
   "Номер депозитного счета": "Номер депозитного счета",
