feat: AGEL-1911 Создан ui компонент с моковыми данными для раздела кредиты

--- a/src/shared/model/i18n/locales/ru/ru.json
+++ b/src/shared/model/i18n/locales/ru/ru.json
@@ -15,7 +15,7 @@
   "Оформить карту": "Оформить карту",
   "Показать больше": "Показать больше",
   "Депозит A-Geld ": "Депозит A-Geld ",
-  "До 30 сентября оформите Депозит A-Geld": "До 30 сентября оформите Депозит A-Geld",
+  "До 30 сентября оформите Депозит A-Geld": "До 30 сентября оформите Депозит A-Geld ",
   "до": "до",
   "Процентная ставка": "Процентная ставка",
   "от": "от",
@@ -29,7 +29,7 @@
   " откроет новые горизонты для вас": " откроет новые горизонты для вас",
   "Максимальная сумма депозита": "Максимальная сумма депозита",
   "Подробная информация": "Подробная информация",
-  "До 30 сентября оформите ": "До 30 сентября оформите ",
+  "До 30 сентября оформите ": "До 30 сентября оформите {{name}}",
   "Номер депозитного счета": "Номер депозитного счета",
   "Сумма на депозитном счете": "Сумма на депозитном счете",
   "Окончание срока депозита": "Окончание срока депозита",
