refactor: AGEL-1990 i18n, fix conflict

--- a/src/shared/model/i18n/locales/en/en.json
+++ b/src/shared/model/i18n/locales/en/en.json
@@ -15,7 +15,6 @@
   "Оформить карту": "Apply for a card",
   "Показать больше": "Show more",
   "Депозит A-Geld ": "Deposit A-Geld ",
-  "До 30 сентября оформите Депозит A-Geld": "Make before September 30 an A-Geld Deposit",
   "до": "up to",
   "Процентная ставка": "Interest rate",
   "от": "from",
@@ -26,10 +25,10 @@
   "Срок депозита": "Deposit term",
   "Оформить": "Apply",
   "Не откладывай жизнь на завтра!": "Don't put off life until tomorrow!",
-  " откроет новые горизонты для вас": " will open new horizons for you",
+  "откроет новые горизонты для вас": "{{name}} will open new horizons for you",
   "Максимальная сумма депозита": "Maximum deposit amount",
   "Подробная информация": "Detailed information",
-  "До 30 сентября оформите ": "Make before September 30 an {{name}}",
+  "До 30 сентября оформите A-Geld ": "Make before September 30 an A-Geld {{name}}",
   "Номер депозитного счета": "Deposit account number",
   "Сумма на депозитном счете": "Deposit balance",
   "Окончание срока депозита": "Deposit expiration date",
