--- a/src/shared/model/i18n/locales/ru/ru.json
+++ b/src/shared/model/i18n/locales/ru/ru.json
@@ -15,7 +15,6 @@
   "Оформить карту": "Оформить карту",
   "Показать больше": "Показать больше",
   "Депозит A-Geld ": "Депозит A-Geld ",
-  "До 30 сентября оформите Депозит A-Geld": "До 30 сентября оформите Депозит A-Geld ",
   "до": "до",
   "Процентная ставка": "Процентная ставка",
   "от": "от",
@@ -26,10 +25,10 @@
   "Срок депозита": "Срок депозита",
   "Оформить": "Оформить",
   "Не откладывай жизнь на завтра!": "Не откладывай жизнь на завтра!",
-  " откроет новые горизонты для вас": " откроет новые горизонты для вас",
+  "откроет новые горизонты для вас": "{{name}} откроет новые горизонты для вас",
   "Максимальная сумма депозита": "Максимальная сумма депозита",
   "Подробная информация": "Подробная информация",
-  "До 30 сентября оформите ": "До 30 сентября оформите {{name}}",
+  "До 30 сентября оформите A-Geld": "До 30 сентября оформите A-Geld {{name}}",
   "Номер депозитного счета": "Номер депозитного счета",
   "Сумма на депозитном счете": "Сумма на депозитном счете",
   "Окончание срока депозита": "Окончание срока депозита",
