fix: AGEL-2094 Исправлен перевод ui компонентов  на ангилйский

--- a/src/shared/model/i18n/locales/en/en.json
+++ b/src/shared/model/i18n/locales/en/en.json
@@ -10,6 +10,7 @@
   "Срок действия": "Expiry date",
   "Баланс": "Balance",
   "Номер карты": "Card number",
+  "Осталось выплатить": "It remains to pay",
   "Информация по карте": "Card information",
   "Перевести": "Transfer",
   "Оформить карту": "Apply for a card",
@@ -17,6 +18,10 @@
   "Депозит A-Geld ": "Deposit A-Geld ",
   "до": "up to",
   "Процентная ставка": "Interest rate",
+  "Сумма кредита": "Loan amount",
+  "Срок кредита": "Loan term",
+  "Размер платежа": "Payment amount",
+  "Дата следующего платежа": "Next payment date",
   "от": "from",
   "Минимальная сумма депозита": "Minimum deposit amount",
   "месяц": "month",
@@ -118,6 +123,10 @@
   "Заберу в офисе банка": "Pick up at the bank office",
   "Потребуется доставка": "Delivery required",
   "Реквизиты": "Requisites",
+  "График платежей": "Payment schedule",
+  "Погасить": "Redeem",
+  "Оплатить": "Pay",
+  "Номер договора : ": "Contract number: ",
   "Выписка по счету": "Account statement",
   "Сделать основным": "Make primary",
   "Закрыть счет": "Close account",
