--- a/src/shared/model/i18n/locales/ru/ru.json
+++ b/src/shared/model/i18n/locales/ru/ru.json
@@ -10,6 +10,7 @@
   "Срок действия": "Срок действия",
   "Баланс": "Баланс",
   "Номер карты": "Номер карты",
+  "Осталось выплатить": "Осталось выплатить",
   "Информация по карте": "Информация по карте",
   "Перевести": "Перевести",
   "Оформить карту": "Оформить карту",
@@ -17,6 +18,10 @@
   "Депозит A-Geld ": "Депозит A-Geld ",
   "до": "до",
   "Процентная ставка": "Процентная ставка",
+  "Сумма кредита": "Сумма кредита",
+  "Срок кредита": "Срок кредита",
+  "Размер платежа": "Размер платежа",
+  "Дата следующего платежа": "Дата следующего платежа",
   "от": "от",
   "Минимальная сумма депозита": "Минимальная сумма депозита",
   "месяц": "месяц",
@@ -118,6 +123,10 @@
   "Заберу в офисе банка": "Заберу в офисе банка",
   "Потребуется доставка": "Потребуется доставка",
   "Реквизиты": "Реквизиты",
+  "График платежей": "График платежей",
+  "Погасить": "Погасить",
+  "Оплатить": "Оплатить",
+  "Номер договора : ": "Номер договора : ",
   "Выписка по счету": "Выписка по счету",
   "Сделать основным": "Сделать основным",
   "Закрыть счет": "Закрыть счет",
