fix: AGEL-2097 translations

--- a/src/shared/model/i18n/locales/en/en.json
+++ b/src/shared/model/i18n/locales/en/en.json
@@ -16,10 +16,12 @@
   "Оформить карту": "Apply for a card",
   "Показать больше": "Show more",
   "Депозит A-Geld ": "Deposit A-Geld ",
+  "Кредит A-Geld ": "Credit A-Geld {{name}}",
   "до": "up to",
+  "До дней": "Up to {{number}} days",
   "Процентная ставка": "Interest rate",
-  "Сумма кредита": "Loan amount",
-  "Срок кредита": "Loan term",
+  "Сумма кредита": "Credit amount",
+  "Срок кредита": "Credit term",
   "Размер платежа": "Payment amount",
   "Дата следующего платежа": "Next payment date",
   "от": "from",
