--- a/src/shared/model/i18n/locales/ru/ru.json
+++ b/src/shared/model/i18n/locales/ru/ru.json
@@ -16,7 +16,9 @@
   "Оформить карту": "Оформить карту",
   "Показать больше": "Показать больше",
   "Депозит A-Geld ": "Депозит A-Geld ",
+  "Кредит A-Geld ": "Кредит A-Geld {{name}}",
   "до": "до",
+  "До дней": "До {{number}} дней",
   "Процентная ставка": "Процентная ставка",
   "Сумма кредита": "Сумма кредита",
   "Срок кредита": "Срок кредита",
