feat: AGEL-2095 добавленна страница для просмотра графика платежей

--- a/src/shared/model/i18n/locales/ru/ru.json
+++ b/src/shared/model/i18n/locales/ru/ru.json
@@ -300,5 +300,7 @@
   "Успех": "Успех",
   "Ошибка": "Ошибка",
   "Операция прошла успешно": "Операция прошла успешно",
-  "Повторите запрос позже": "Повторите запрос позже"
+  "Повторите запрос позже": "Повторите запрос позже",
+  "Тип кредита": "Тип кредита",
+  "Дата заключения договора": "Дата заключения договора"
 }
