fix:AGEL=2095 Добавил переводы нескольких компонентов и исправил путь к целевому компоненту

--- a/src/shared/model/i18n/locales/en/en.json
+++ b/src/shared/model/i18n/locales/en/en.json
@@ -303,5 +303,10 @@
   "Операция прошла успешно": "Operation completed successfully",
   "Повторите запрос позже": "Please try again later",
   "Тип кредита": "Loan type",
-  "Дата заключения договора": "Date of conclusion of the contract"
+  "Дата заключения договора": "Date of conclusion of the contract",
+  "Дата платежа": "Payment date",
+  "Сумма платежа": "Payment amount",
+  "Основной долг": "Principal debt",
+  "Проценты": "Percentage",
+  "Остаток по кредиты": "Loan balance"
 }
