--- a/src/shared/model/i18n/locales/ru/ru.json
+++ b/src/shared/model/i18n/locales/ru/ru.json
@@ -304,5 +304,10 @@
   "Операция прошла успешно": "Операция прошла успешно",
   "Повторите запрос позже": "Повторите запрос позже",
   "Тип кредита": "Тип кредита",
-  "Дата заключения договора": "Дата заключения договора"
+  "Дата заключения договора": "Дата заключения договора",
+  "Дата платежа": "Дата платежа",
+  "Сумма платежа": "Сумма платежа",
+  "Основной долг": "Основной долг",
+  "Проценты": "Проценты",
+  "Остаток по кредиты": "Остаток по кредиты"
 }
