--- a/src/shared/model/i18n/locales/ru/ru_info.json
+++ b/src/shared/model/i18n/locales/ru/ru_info.json
@@ -60,5 +60,26 @@
   "Показать полную информацию": "Показать полную информацию",
   "Вернуться к списку": "Вернуться к списку",
   "Контактная информация": "Контактная информация",
-  "Телефон отделения:": "Телефон отделения:"
+  "Телефон отделения:": "Телефон отделения:",
+
+  "Часто задаваемые вопросы": "Часто задаваемые вопросы",
+  "Общие вопросы": "Общие вопросы",
+  "О картах": "О картах",
+  "О кредитах": "О кредитах",
+  "О вкладах": "О вкладах",
+  "О страховании": "О страховании",
+  "Не нашли нужного ответа?": "Не нашли нужного ответа?",
+  "Наши специалисты помогут в решении вашего вопроса": "Наши специалисты помогут в решении вашего вопроса",
+  "Выбрать способ связи": "Выбрать способ связи",
+  "Дебетовые карты": "Дебетовые карты",
+  "Что нужно, чтобы открыть дебетовую карту?": "Что нужно, чтобы открыть дебетовую карту?",
+  "Выберите подходящую по условиям, нажмите «Заказать карту» и впишите свои данные. Счёт откроем сразу — можно в этот же день переводить деньги в мобильном приложении или платить за покупки в интернете. Пластиковую карту доставим в течение нескольких дней." : "Выберите подходящую по условиям, нажмите «Заказать карту» и впишите свои данные. Счёт откроем сразу — можно в этот же день переводить деньги в мобильном приложении или платить за покупки в интернете. Пластиковую карту доставим в течение нескольких дней.",
+  "Какие виды дебетовых карт есть в банке A-Geld?": "Какие виды дебетовых карт есть в банке A-Geld?",
+  "Сколько будут действовать дебетовые карты?": "Сколько будут действовать дебетовые карты?",
+  "Как изменить лимиты дебетовых карт?": "Как изменить лимиты дебетовых карт?",
+  "Кредитные карты": "Кредитные карты",
+  "Что нужно, чтобы открыть кредитную карту?": "Что нужно, чтобы открыть кредитную карту?",
+  "Что такое беспроцентный период кредитования?": "Что такое беспроцентный период кредитования?",
+  "Как узнать остаток задолженности?": "Как узнать остаток задолженности?",
+  "Как изменить лимиты кредитных карт?": "Как изменить лимиты кредитных карт?"
 }
